--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <h1>Role play</h1>
+    <h2>Ongoing games</h2>
     {% if game_list %}
-        <p>Ongoing games:</p>
-        <ul>
+        <tr>
             {% for game in game_list %}
-                <li><a href={% url 'detail' game.id %}>{{ game.id }}</a></li>
+                <td>{{ game.start_date }}</td>
+                <td><a href={% url 'detail' game.id %}>{{ game }}</a></td>
             {% endfor %}
-        </ul>
+        </tr>
     {% else %}
         <p>No games are available...</p>
     {% endif %}
