--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -5,7 +5,7 @@
     <title>egraba's role-play</title>
   </head>
   <body>
-    <h1>{{ game_id }}</h1>
+    <h1>{{ game }}</h1>
     <h2>Characters</h2>
     {% if character_list %}
         <table>
