--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -20,6 +20,7 @@
                             <tr><td>Race</td><td>{{ character.race }}</td></tr>
                             <tr><td>Age</td><td>{{ character.age }}</td></tr>
                             <tr><td>XP</td><td>{{ character.xp }}</td></tr>
+                            <tr><td>HP</td><td>{{ character.hp }}</td></tr>
                             <tr><td>MP</td><td>{{ character.mp }}</td></tr>
                         </td>
                     </table>
