Show if an action has to be taken by the players

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -37,7 +37,12 @@
             {% for narrative in narrative_list %}
                 <tr>
                     <td>{{ narrative.date }}</td>
+                </tr>
+                <tr>
                     <td>{{ narrative.message }}</td>
+                    {% if narrative.action_required %}
+                        <td>&#10036;</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
