--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -38,11 +38,10 @@
                                     <tr>
                                         <td class = "action_character">{{ action_request.character }}</td>
                                         <td class = "action_icon">
-                                            {{ action_request.get_action_type_display }}
-                                            {% if action_request.action_type == 'C' %}
-                                                &#10067;
-                                            {% elif action_request.action_type == 'D' %}
-                                                &#127922;
+                                            {% if action_request.action_type == 'D' %}
+                                                <a href={% url 'launch_dice_request' game.id action_request.character.id %}>{{ action_request.get_action_type_display }} &#127922;</a>
+                                            {% elif action_request.action_type == 'C' %}
+                                                {{ action_request.get_action_type_display }} &#10067;
                                             {% endif %}
                                         </td>
                                     </tr>
