--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -1,51 +1,48 @@
 {% extends 'base.html' %}
 
-{% block nav %}
+{% block content %}
+<div class="rpgui-container framed">
     {% for character in character_list %}
-        <table class="character">
-            <td>
-                <tr><td><span>{{ character.name }}</span></td></tr>
-                <tr><td>Race:</td><td>{{ character.get_race_display }}</td></tr>
-                <tr><td>Age:</td><td>{{ character.age }}</td></tr>
-                <tr><td>XP:</td><td>{{ character.xp }}</td></tr>
-                <tr><td>HP:</td><td>{{ character.hp }} / {{ character.max_hp }}</td></tr>
-            </td>
-        </table>
+        <p>{{ character.name }}</p>
+        <div class="rpgui-container framed-grey">
+            <p>Race: {{ character.get_race_display }}</p>
+            <p>Age: {{ character.age }}</p>
+            <p>XP: {{ character.xp }}</p>
+            <p>HP: {{ character.hp }} / {{ character.max_hp }}</p>
+        </div>
     {% empty %}
         <p>No characters for this game...</p>
     {% endfor %}
-{% endblock %}
+</div>
 
-{% block main %}
-<h1>{{ game }}</h1>
-{% for narrative in narrative_list %}
-    <article>
-        <header>{{ narrative.date }}</header>
-        <p>{{ narrative.message }}</p>
-    </article>
-    {% for action_request in action_request_list %}
-        {% if action_request.id == narrative.id %}
-            <tr>
-                <td>
-                    <table class="action_request">
-                        <tr>
-                            <td class = "action_character">{{ action_request.character }}</td>
-                            <td class = "action_icon">
-                                {% if action_request.action_type == 'D' %}
-                                    <a href={% url 'launch_dice_request' game.id action_request.character.id %}>
-                                        {{ action_request.get_action_type_display }} <i class="fa-regular fa-dice-d20"></i>
-                                    </a>
-                                {% elif action_request.action_type == 'C' %}
-                                    {{ action_request.get_action_type_display }} &#10067;
-                                {% endif %}
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        {% endif %}
+<div class="inner rpgui-container framed-golden-2">
+    <h1>{{ game }}</h1>
+    {% for narrative in narrative_list %}
+        <p>{{ narrative.date }} {{ narrative.message }}</p>
+        {% for action_request in action_request_list %}
+            {% if action_request.id == narrative.id %}
+                <tr>
+                    <td>
+                        <table class="action_request">
+                            <tr>
+                                <td class = "action_character">{{ action_request.character }}</td>
+                                <td class = "action_icon">
+                                    {% if action_request.action_type == 'D' %}
+                                        <a href={% url 'launch_dice_request' game.id action_request.character.id %}>
+                                            {{ action_request.get_action_type_display }} <i class="fa-regular fa-dice-d20"></i>
+                                        </a>
+                                    {% elif action_request.action_type == 'C' %}
+                                        {{ action_request.get_action_type_display }} &#10067;
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            {% endif %}
+        {% endfor %}
+    {% empty %}
+        <p>The story did not start yet...</p>
     {% endfor %}
-{% empty %}
-    <p>The story did not start yet...</p>
-{% endfor %}
+</div>
 {% endblock %}
