--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %}
 
-{% block main %}
-<h1>Ongoing games</h1>
-    {% if game_list %}
-        <table>
-            {% for game in game_list %}
-            <tr>
-                <td>{{ game.start_date }}</td>
-                <td><a href={% url 'detail' game.id %}>{{ game }}</a></td>
-            </tr>
-            {% endfor %}
-        </table>
-    {% else %}
+{% block content %}
+<div class="inner rpgui-container framed">
+    <h1 class="title">Role play</h1>
+    <hr class="golden"/>
+    <h1>Ongoing games</h1>
+    {% for game in game_list %}
+        <p>{{ game.start_date }} <a href={% url 'detail' game.id %}>{{ game }}</a></p>
+    {% empty %}
         <p>No games are available...</p>
-    {% endif %}
+    {% endfor %}
+    <img src="{% static 'dist/img' %}" />
+</div>
 {% endblock %}
