--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -136,7 +136,7 @@
 
         eventsSocket.onmessage = function(event) {
             message = JSON.parse(event.data)
-            eventList.innerHTML += '<p>' + moment(message["date"]).fromNow() + ', ' + message["message"] + message["content"] + '</p>'
+            eventList.innerHTML += '<p>' + moment(message["date"]).fromNow() + ', ' + message["content"] + '</p>'
             lines = eventList.innerHTML.split('</p>');
             if (lines.length > 10) {
                 lines.splice(0, 1);
