--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="inner rpgui-container framed">
+<div class="center rpgui-container framed">
     <h1 class="title">Role play</h1>
     <hr class="golden"/>
     <h1>Ongoing games</h1>
