--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -13,7 +13,7 @@
             {% if pending_action.character.id == character.id %}    
                 <div class="rpgui-container framed-grey">
                     {% if pending_action.action_type == 'D' %}
-                        <a href={% url 'launch_dice_request' game.id pending_action.character.id %}> {{ pending_action.get_action_type_display }} <i class="fa-regular fa-dice-d20"></i></a>
+                        <a href={% url 'launch_dice' game.id pending_action.character.id %}> {{ pending_action.get_action_type_display }} <i class="fa-regular fa-dice-d20"></i></a>
                     {% elif pending_action.action_type == 'C' %}
                         {{ pending_action.get_action_type_display }} &#10067;
                     {% endif %}
