--- a/game/templates/registration/login.html
+++ b/game/templates/registration/login.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="inner rpgui-container framed-golden">
-    <h1>Log In</h1>
+<div class="login rpgui-container framed-golden">
+    <h1>Log in</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Log in</button>
+        <div class="rpgui-center">
+            <button class="rpgui-button" type="submit"><p>Log in</p></button>
+        </div>
     </form>
 </div>
 {% endblock %}
