--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -18,7 +18,7 @@
     
     <hr/>
 
-    <p>Role Play is an open-source virtual role playing game.</p>
+    <p>Role play is an open-source virtual role playing game.</p>
     <p>It allows people to play remotely, by following a tail and perfoming some actions 
         like throwing dices.</p>
     
