--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -9,7 +9,9 @@
 
 .center.rpgui-container.framed {
     position: static;
-    margin: 2em;
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .rpgui-container.framed {
